--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 YUI3 based Javascript Repository
-<h2>YUI3-Workbench</h2>
+##YUI3-Workbench
 Repository for YUI3 applications. (Examples and extensions) 
 Source : Javascript / Html and CSS code.
 
